# rinhadebackend-2023

./: Dockerfile  README.md  default.env  docker-compose.yml  initdb.py  nginx.conf  prestart.sh  pyproject.toml  run.sh
app/: config.py  data.py  database.py  fixtures.py  main.py  models.py  routers.py  schemas.py
app/models/: base.py  person.py
app/tests/: test_home_ready.py  test_models.py  test_routers.py  test_schema_pessoa.py
backend_fastapi/: Dockerfile  docker-compose.yml  initdb.py  prestart.sh  pyproject.toml  pytest.ini  run.sh
backend_fastapi/app/: conftest.py  database.py  fixtures.py  main.py  redis.py  routers.py  schemas.py  settings.py
backend_fastapi/app/models/: person.py
backend_fastapi/app/tests/: test_home_ready.py  test_models.py  test_routers.py  test_schema_pessoa.py
cache/: docker-compose.yml
database/: docker-compose.yml  postgresql.conf
gatling/: .gitignore  Dockerfile  README.md  docker-compose.yml  rinha.ascii  run-test.sh  run.sh
gatling/scripts/: generate-resources.sh  gerar-pessoas.py  gerar-termos-busca.py  run.sh
gatling/simulations/rinhabackend/: RinhaBackendSimulation.scala
gatling/user-files/simulations/rinhabackend/: RinhaBackendSimulation.scala
observability/grafana/dashboards/: rinha-backend.json
observability/grafana/datasources/: ds_prometheus.yml
observability/prometheus/: prometheus.yml
proxy/: docker-compose.yml  nginx.conf
sql/: init-testing-db.sh
