[tool.poetry]
name = "rinhadebackend-2023"
version = "0.1.0"
description = ""
authors = ["Arthur Alvim <afmalvim@gmail.com>"]
readme = "README.md"
packages = [{include = "rinhadebackend_2023"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.0"
sqlalchemy = "^2.0.20"
uvicorn = "^0.23.2"
psycopg2-binary = "^2.9.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"
factory-boy = "^3.3.0"
ipdb = "^0.13.13"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
